ACLOCAL_AMFLAGS     = -I m4
auxdir             = @ac_aux_dir@
AUX_DIST           = ${auxdir}/install-sh ${auxdir}/missing ${auxdir}/ltconfig\
                     ${auxdir}/ltmain.sh ${auxdir}/config.guess ${auxdir}/config.sub\
                     ${auxdir}/mkinstalldirs

EXTRA_DIST         =

AUTOMAKE_OPTIONS   = foreign

SUBDIRS     =\
  base\
  rexample\
  PYTHON

MAINTAINERCLEANFILES  = Makefile.in aclocal.m4 configure
